# slurm_jd

./: CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: check.yml  deploy.yml
src/: .main.rs.swp  main.rs
