[package]
name = "jobs_done"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.43"
colored = "3.1.1"
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
