[package]
name = "jobs_done"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.45"
colored = "3.1.1"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }

[profile.release]
lto = "fat"
